cmake_minimum_required(VERSION 2.8)

project(optimization)

add_subdirectory(00_random)
add_subdirectory(00_random3d)
add_subdirectory(01_gradient_descent)
add_subdirectory(01_gradient_descent3d)
add_subdirectory(02_levenberg_marquardt)
add_subdirectory(03_newton_raphson)
add_subdirectory(04_gauss_newton)
add_subdirectory(square_error_visualization)